fix the border-radius for right aligned dropdown-menu

--- a/docs/assets/css/google-bootstrap.css
+++ b/docs/assets/css/google-bootstrap.css
@@ -1423,6 +1423,12 @@ select:focus:required:invalid:focus {
   -moz-box-shadow: none;
   box-shadow: none;
 }
+.navbar .pull-right > li > .dropdown-menu .dropdown-menu,
+.navbar .nav > li > .dropdown-menu.pull-right .dropdown-menu {
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+}
 .navbar-inverse .navbar-search .search-query:focus,
 .navbar-inverse .navbar-search .search-query.focused {
   padding: 1px 15px;
@@ -1552,7 +1558,7 @@ select:focus:required:invalid:focus {
   background-image: linear-gradient(to bottom, #f5f5f5, #f1f1f1);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5', endColorstr='#fff1f1f1', GradientType=0);
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  border: 1px solid #dcdcdc;
 }
 .navbar-googlebar.navbar-inverse {
   color: #999999;
